--- a/home_2.html
+++ b/home_2.html
@@ -110,7 +110,7 @@
       <script>
         // Redirect logic
         document.querySelector('#btn1').addEventListener('click', () => {
-          window.location.href = 'index.html';
+          window.location.href = '../';
         });
       </script>
     </a-scene>
