updated demo app

--- a/home_1.html
+++ b/home_1.html
@@ -112,7 +112,7 @@
       <script>
         // Redirect logic
         document.querySelector('#btn1').addEventListener('click', () => {
-          window.location.href = '../';
+          window.location.href = 'https://chandms.github.io/demo_app_webxr_main/';
         });
       </script>
     </a-scene>
