updated demo app

--- a/gaze_based.html
+++ b/gaze_based.html
@@ -70,11 +70,11 @@
           <a-text value="Started" position="-0.51 0.1 1" scale="1 1 1" color="black"></a-text>
         </a-image>
 
-        <a-box id="btn1"
+        <!-- <a-box id="btn1"
             position="-2 1.2 -1.5"
             color="#4CAF50"
             depth="0.1" height="0.5" width="0.3"
-            class="raycastable">
+            class="raycastable"> -->
         <!-- <a-image src="#door1" position="0.3 0.08 0.3" scale="0.5 0.4 0.5"></a-image> -->
         <!-- <a-text value="Go to \nHomepage" align="center" position="0.35 0.08 0.3" scale="0.2 0.2 0.2"></a-text> -->
         
@@ -107,12 +107,12 @@
 	    <a-entity id="origin"></a-entity>
       <a-entity start-place adv-vis></a-entity>
       <a-entity scan-elements log-data log-cam></a-entity>
-      <script>
+      <!-- <script>
         // Redirect logic
         document.querySelector('#btn1').addEventListener('click', () => {
           window.location.href = 'https://chandms.github.io/demo_app_webxr_main/';
         });
-      </script>
+      </script> -->
     </a-scene>
   </body>
   
