--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
       <script>
         // Redirect logic
         document.querySelector('#btn1').addEventListener('click', () => {
-          window.location.href = 'home_1.html';
+          window.location.href = 'controller_based.html';
         });
 
         document.querySelector('#btn2').addEventListener('click', () => {
-          window.location.href = 'home_2.html';
+          window.location.href = 'gaze_based.html';
         });
       </script>
     </a-scene>
