--- a/controller_based.html
+++ b/controller_based.html
@@ -80,12 +80,12 @@
         <!-- <a-image src="#door1" position="0.3 0.08 0.3" scale="0.5 0.4 0.5"></a-image> -->
         <!-- <a-text value="Go to \nHomepage" align="center" position="0.35 0.08 0.3" scale="0.2 0.2 0.2"></a-text> -->
         
-      </a-box>
-      <a-image src="#door1" position="-1.95 1.2 -1.4" scale="0.5 0.4 0.5">
+      <!-- </a-box> -->
+      <!-- <a-image src="#door1" position="-1.95 1.2 -1.4" scale="0.5 0.4 0.5">
         <a-text value="Go to \nHomepage" align="center" position="0 0 0" scale="0.4 0.4 0.4"></a-text>
-      </a-image>
+      </a-image> -->
 
-      <a-torus 
+      <!-- <a-torus 
       radius="0.5" 
       radius-tubular="0.02"
       segments-tubular="20"
@@ -94,7 +94,7 @@
       rotation="0 0 0"
       material="color: #00FFFF; side: double; metalness: 0.8"
       scale="0.5 1 0.5">
-      </a-torus>
+      </a-torus> -->
 
 
         <a-sound id="giggle-sound" src="#giggle" position="0 1 0"></a-sound>
