--- a/controller_based.html
+++ b/controller_based.html
@@ -108,7 +108,7 @@
 	  
 	    <a-entity id="origin"></a-entity>
       <a-entity start-place adv-vis></a-entity>
-      <a-entity scan-elements log-data log-cam></a-entity>
+      <!-- <a-entity scan-elements log-data log-cam></a-entity> -->
       <!-- <script>
         // Redirect logic
         document.querySelector('#btn1').addEventListener('click', () => {
