--- a/controller_based.html
+++ b/controller_based.html
@@ -107,7 +107,7 @@
       <a-entity id="armadillo-parent" scale="4 4 4"></a-entity>
 	  
 	    <a-entity id="origin"></a-entity>
-      <a-entity start-place adv-vis></a-entity>
+      <a-entity start-place adv-vis reload-comp></a-entity>
       <!-- <a-entity scan-elements log-data log-cam></a-entity> -->
       <!-- <script>
         // Redirect logic
